--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h1>우앵</h1>
 	</div>
 	<div class="page" id="statistics">
-		<span class="pie-chart1"><span class="center">월간 폭음률</span></div>
+		<span class="pie-chart1"><span class="center"><h1>월간 폭음률</h1></span></div>
 	</div>
 	<div class="page" id="help">
 		<span class="pie-chart1"><span class="center"></span></div>
