--- a/index.html
+++ b/index.html
@@ -19,12 +19,24 @@
 				</ul>
 			</nav>
 		</header>
+		<!-- {<div class="header-line"></div>} -->
 	</div>
 	<div class="page" id="home">
 		<h1>우앵</h1>
 	</div>
 	<div class="page" id="statistics">
-		<span class="pie-chart1"><span class="center"><h1>월간 폭음률</h1></span></div>
+		<div class="pie-chart1">
+			<span class="center">
+				<div class="text">
+					<h3>2017년 기준</h3>
+					<h2>성인 월간 폭음률</h2>
+					<h1 style="font-size: 3.0rem">39%</h1>
+				</div>
+			</span>
+		</div>
+		<div>
+			<h1>웅앵</h1>
+		</div>
 	</div>
 	<div class="page" id="help">
 		<span class="pie-chart1"><span class="center"></span></div>
