Fix title layout

--- a/index.html
+++ b/index.html
@@ -25,17 +25,19 @@
 		<h1>우앵</h1>
 	</div>
 	<div class="page" id="statistics">
-		<div class="pie-chart1">
-			<span class="center">
-				<div class="text">
-					<h3>2017년 기준</h3>
-					<h2>성인 월간 폭음률</h2>
-					<h1 style="font-size: 3.0rem">39%</h1>
-				</div>
-			</span>
-		</div>
-		<div>
-			<h1>웅앵</h1>
+		<div class="chart-section" style="top: 20%;">
+			<div class="pie-chart1">
+				<span class="center">
+					<div class="text">
+						<h3>2017년 기준</h3>
+						<h2>성인 월간 폭음률</h2>
+						<h1 style="font-size: 3.0rem">39%</h1>
+					</div>
+				</span>
+			</div>
+			<div>
+				<h1 class="chart-title">웅앵</h1>
+			</div>
 		</div>
 	</div>
 	<div class="page" id="help">
