--- a/index.html
+++ b/index.html
@@ -22,26 +22,35 @@
 		<!-- {<div class="header-line"></div>} -->
 	</div>
 	<div class="page" id="home">
-		<h1>우앵</h1>
+		<div class="title">
+			<h1>함께 금주해요</h1>
+		</div>
 	</div>
 	<div class="page" id="statistics">
-		<div class="chart-section" style="top: 20%;">
+		<div class="chart-section">
 			<div class="pie-chart1">
 				<span class="center">
 					<div class="text">
-						<h3>2017년 기준</h3>
-						<h2>성인 월간 폭음률</h2>
-						<h1 style="font-size: 3.0rem">39%</h1>
+						<h2 style="font-size: 2.0rem">성인 월간 폭음률</h2>
+						<h1 style="font-weight: 800; font-size: 3.0rem">39%</h1>
 					</div>
 				</span>
 			</div>
 			<div>
-				<h1 class="chart-title">웅앵</h1>
+				<h5 class="chart-title">보건복지부 질병관리본부, 2017</h5>
+			</div>
+		</div>
+		<div class="s1" style="background-color: crimson; height: 500px;">
+			<div class="text">
+				<h2 style="font-size: 2.0rem">알코올 관련 질병 사망</h2>
+				<h3 style="font-weight: 400; font-size: 1.5rem">10만명당</h3>
+				<h1 style="font-weight: 800; font-size: 3.0rem">4,809명</h1>
+				<h3 style="font-weight: 400; font-size: 0.8rem">통계청, 2017</h3>
 			</div>
 		</div>
 	</div>
 	<div class="page" id="help">
-		<span class="pie-chart1"><span class="center"></span></div>
+		<h1>ㅁㄹ</h1>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="index.js"></script>
