--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 		<header>
 			<nav>
 				<ul class="header-list">
-					<li><a href="#home">홈</a></li>
-					<li><a href="#statistics">현황</a></li>
-					<li><a href="">위험성</a></li>
-					<li><a href="#help">도움</a></li>
+					<li><a class = "a-home" href="#home">홈</a></li>
+					<li><a class = "a-statistics" href="#statistics">현황</a></li>
+					<li><a class = "a-danger" href="#danger">위험성</a></li>
+					<li><a class = "a-help" href="#help">도움</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -48,6 +48,9 @@
 				<h3 style="font-weight: 400; font-size: 0.8rem">통계청, 2017</h3>
 			</div>
 		</div>
+	</div>
+	<div class="page" id="danger">
+		<h1>ㅁㄹ</h1>
 	</div>
 	<div class="page" id="help">
 		<h1>ㅁㄹ</h1>
