--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
 					</div>
 				</span>
 			</div>
+			<div class="pie-chart1">
+				<span class="center">
+					<div class="text">
+						<h2 style="font-size: 2.0rem">20대 월간 폭음률</h2>
+						<h1 style="font-weight: 800; font-size: 3.0rem">50.6%</h1>
+					</div>
+				</span>
+			</div>
 			<div>
 				<h5 class="chart-title">보건복지부 질병관리본부, 2017</h5>
 			</div>
 		</div>
-		<div class="s1" style="background-color: crimson; height: 500px;">
+		<div class="s1" style="background-color: palevioletred; height: 500px;">
 			<div class="text">
 				<h2 style="font-size: 2.0rem">알코올 관련 질병 사망</h2>
 				<h3 style="font-weight: 400; font-size: 1.5rem">10만명당</h3>
