--- a/index.html
+++ b/index.html
@@ -22,8 +22,13 @@
 		<!-- {<div class="header-line"></div>} -->
 	</div>
 	<div class="page" id="home">
-		<div class="title">
-			<h1>함께 금주해요</h1>
+		<div class="title-container">
+			<div class="title">
+				<h1>함께 금주해요</h1>
+			</div>
+		</div>
+		<div class="youtube" style="height: 400px; text-align: center; background: palevioletred; padding: 20%">
+				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/0hSVJXvLkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</div>
 	</div>
 	<div class="page" id="statistics">
@@ -58,10 +63,40 @@
 		</div>
 	</div>
 	<div class="page" id="danger">
-		<h1>ㅁㄹ</h1>
+		<div class="icon-container">
+			<div class="icon" onmouseover="mover1()">
+				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfMTk0/MDAxNTc0ODM1MTk2MzEy.NC7i9tUkQjgR2LywKdBYhjMLtvMR7KXX3XCWW2syfxIg.hVlP_6oTPx4jBAfvLhm-bg5InrCksXGgMj403P1egK0g.PNG.uglycat8/image.png?type=w773"/></div>
+				<h2 class="text">수면 장애</h2>
+			</div>
+			<div class="icon" onmouseover="mover2()">
+				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfMTEz/MDAxNTc0ODM1MjYzMDE2.GVbEl1e-sxoXGHqa30EyCPuG_tZoGiv3s6cddbuW9BMg.GxSMPIcRw-MFYxF0V3_cUCIgX6YkqG1B7F9bNzoeKiQg.PNG.uglycat8/image.png?type=w773"/></div>
+				<h2 class="text">약물 부작용</h2>
+			</div>
+			<div class="icon" onmouseover="mover3()">
+				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfNDUg/MDAxNTc0ODM1OTc2ODky.Lwys619MMYZmzifClmT2LjCL5nod1pajoS7NwdDZshwg.2UfnyLPZsoJ76l7MQ07VPS1HiwkA5Gw6s1yFQAJ9D7Ag.PNG.uglycat8/image.png?type=w773"/></div>
+				<h2 class="text">간 질환 발병</h2>
+			</div>
+			<div class="icon" onmouseover="mover4()">
+				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfNiAg/MDAxNTc0ODM2NDIyNjcx.0rNgY2bKtC2t-wpBwkGAGhbrerIg_TvlFHn_8WJjczog.CMgAj0Ho3yhAtmlU1z3UpiXxy8Wp3Vjaj0JhPdY2qgog.PNG.uglycat8/image.png?type=w773"/></div>
+				<h2 class="text">암 발병</h2>
+			</div>
+		</div>
+		<div class="detail" style="display: block; margin: 150px 25%; padding: 5px 20px; color:white; background: palevioletred;">
+			<h4>detail</h4>
+		</div>
 	</div>
 	<div class="page" id="help">
-		<h1>ㅁㄹ</h1>
+		<div class="text">
+			<h1>음주, 혼자 멈추기 힘들다면</h1>
+			<br>
+			<br>
+			<br>
+			<a href="http://www.kaacc.co.kr/">한국중독관리센터협회</a>
+			<h3>-</h3>
+			<h5 style="font-weight: 400; font-size: 1.0rem;">지역사회를 기반으로 한 중독문제 관리체계를 구축함으로써<br>
+				중독자 및 그 가족에 대한 지원과 지역주민에 대한 중독 (알코올, 도박, 인터넷, 마약, 기타 중독)<br>
+				예방 서비스 제공.</h5>
+		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<script src="index.js"></script>
