--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
 	<div class="page" id="danger">
 		<div class="icon-container">
 			<div class="icon" onmouseover="mover1()">
-				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfMTk0/MDAxNTc0ODM1MTk2MzEy.NC7i9tUkQjgR2LywKdBYhjMLtvMR7KXX3XCWW2syfxIg.hVlP_6oTPx4jBAfvLhm-bg5InrCksXGgMj403P1egK0g.PNG.uglycat8/image.png?type=w773"/></div>
+				<div class="img"><img src="img/image (1).png"/></div>
 				<h2 class="text">수면 장애</h2>
 			</div>
 			<div class="icon" onmouseover="mover2()">
-				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfMTEz/MDAxNTc0ODM1MjYzMDE2.GVbEl1e-sxoXGHqa30EyCPuG_tZoGiv3s6cddbuW9BMg.GxSMPIcRw-MFYxF0V3_cUCIgX6YkqG1B7F9bNzoeKiQg.PNG.uglycat8/image.png?type=w773"/></div>
+				<div class="img"><img src="img/image (2).png"/></div>
 				<h2 class="text">약물 부작용</h2>
 			</div>
 			<div class="icon" onmouseover="mover3()">
-				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfNDUg/MDAxNTc0ODM1OTc2ODky.Lwys619MMYZmzifClmT2LjCL5nod1pajoS7NwdDZshwg.2UfnyLPZsoJ76l7MQ07VPS1HiwkA5Gw6s1yFQAJ9D7Ag.PNG.uglycat8/image.png?type=w773"/></div>
+				<div class="img"><img src="img/image (3).png"/></div>
 				<h2 class="text">간 질환 발병</h2>
 			</div>
 			<div class="icon" onmouseover="mover4()">
-				<div class="img"><img src="https://postfiles.pstatic.net/MjAxOTExMjdfNiAg/MDAxNTc0ODM2NDIyNjcx.0rNgY2bKtC2t-wpBwkGAGhbrerIg_TvlFHn_8WJjczog.CMgAj0Ho3yhAtmlU1z3UpiXxy8Wp3Vjaj0JhPdY2qgog.PNG.uglycat8/image.png?type=w773"/></div>
+				<div class="img"><img src="img/image (4).png"/></div>
 				<h2 class="text">암 발병</h2>
 			</div>
 		</div>
