--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 	<div class="page" id="home">
 		<div class="title-container">
 			<div class="title">
-				<h1>함께 금주해요</h1>
+				<div class="img"><img src="img/image (5).png"/></div>
+				<h1>함께 금주해요!</h1>
 			</div>
 		</div>
 		<div class="youtube" style="height: 400px; text-align: center; background: palevioletred; padding: 20%">
@@ -87,15 +88,21 @@
 	</div>
 	<div class="page" id="help">
 		<div class="text">
+			<div class="img"><img src="img/image (7).png" style="width: 10%; min-width: 100px;"/></div>
 			<h1>음주, 혼자 멈추기 힘들다면</h1>
 			<br>
 			<br>
-			<br>
-			<a href="http://www.kaacc.co.kr/">한국중독관리센터협회</a>
-			<h3>-</h3>
+			<a href="http://www.kaacc.co.kr/00_main/main.php">한국중독관리센터협회</a>
+			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
 			<h5 style="font-weight: 400; font-size: 1.0rem;">지역사회를 기반으로 한 중독문제 관리체계를 구축함으로써<br>
 				중독자 및 그 가족에 대한 지원과 지역주민에 대한 중독 (알코올, 도박, 인터넷, 마약, 기타 중독)<br>
 				예방 서비스 제공.</h5>
+			<a href="http://www.129.go.kr">보건복지상담센터</a>
+			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
+			<h5 style="font-weight: 400; font-size: 1.0rem;">보건복지 정보 및 상담 제공</h5>
+			<a href="http://ncmh.go.kr/kor/index.jsp">국립정신건강센터</a>
+			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
+			<h5 style="font-weight: 400; font-size: 1.0rem;">정신질환 예방 및 진료, 정신건강 관련 교육</h5>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
