--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 	</div>
 	<div class="page" id="danger">
 		<div class="icon-container">
+			<h1 style="color: #AB70C1">Click!</h5>
 			<div class="icon" onmouseover="mover1()">
 				<div class="img"><img src="img/image (1).png"/></div>
 				<h2 class="text">수면 장애</h2>
@@ -82,27 +83,34 @@
 				<h2 class="text">암 발병</h2>
 			</div>
 		</div>
-		<div class="detail" style="display: block; margin: 150px 25%; padding: 5px 20px; color:white; background: palevioletred;">
+		<div class="detail" style="display: block; margin: 150px 25%; padding: 5px 20px; color:white; background: #AB70C1;">
 			<h4>detail</h4>
 		</div>
 	</div>
 	<div class="page" id="help">
-		<div class="text">
-			<div class="img"><img src="img/image (7).png" style="width: 10%; min-width: 100px;"/></div>
-			<h1>음주, 혼자 멈추기 힘들다면</h1>
-			<br>
-			<br>
-			<a href="http://www.kaacc.co.kr/00_main/main.php">한국중독관리센터협회</a>
-			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
-			<h5 style="font-weight: 400; font-size: 1.0rem;">지역사회를 기반으로 한 중독문제 관리체계를 구축함으로써<br>
-				중독자 및 그 가족에 대한 지원과 지역주민에 대한 중독 (알코올, 도박, 인터넷, 마약, 기타 중독)<br>
-				예방 서비스 제공.</h5>
-			<a href="http://www.129.go.kr">보건복지상담센터</a>
-			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
-			<h5 style="font-weight: 400; font-size: 1.0rem;">보건복지 정보 및 상담 제공</h5>
-			<a href="http://ncmh.go.kr/kor/index.jsp">국립정신건강센터</a>
-			<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
-			<h5 style="font-weight: 400; font-size: 1.0rem;">정신질환 예방 및 진료, 정신건강 관련 교육</h5>
+		<div class="s119-container">
+			<div class="s119">
+				<img class="img" src="http://www.thinkfood.co.kr/news/photo/201211/50859_54833_1820.jpg"/>
+			</div>
+		</div>
+		<div class="text-container">
+			<div class="text">
+				<div class="img"><img src="img/image (7).png" style="width: 10%; min-width: 100px;"/></div>
+				<h1>음주, 혼자 멈추기 힘들다면</h1>
+				<br>
+				<br>
+				<a href="http://www.kaacc.co.kr/00_main/main.php">한국중독관리센터협회</a>
+				<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
+				<h5 style="font-weight: 400; font-size: 1.0rem;">지역사회를 기반으로 한 중독문제 관리체계를 구축함으로써<br>
+					중독자 및 그 가족에 대한 지원과 지역주민에 대한 중독 (알코올, 도박, 인터넷, 마약, 기타 중독)<br>
+					예방 서비스 제공.</h5>
+				<a href="http://www.129.go.kr">보건복지상담센터</a>
+				<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
+				<h5 style="font-weight: 400; font-size: 1.0rem;">보건복지 정보 및 상담 제공</h5>
+				<a href="http://ncmh.go.kr/kor/index.jsp">국립정신건강센터</a>
+				<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
+				<h5 style="font-weight: 400; font-size: 1.0rem;">정신질환 예방 및 진료, 정신건강 관련 교육</h5>
+			</div>
 		</div>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
