--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 		<div class="title-container">
 			<div class="title">
 				<div class="img"><img src="img/image (5).png"/></div>
-				<h1>함께 금주해요!</h1>
+				<h1><span>함께 </span><span style="font-weight: 800">금주</span><span>해요!</span></h1>
+				<br>
+				<h4>모든 악덕 중에 음주만큼 성공을 방해하는 것은 없다.</h4>
+				<h5>-Walter Scott(1771~1831)</h5>
 			</div>
 		</div>
 		<div class="youtube" style="height: 400px; text-align: center; background: palevioletred; padding: 20%">
