--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div class="page" id="home">
 		<div class="title-container">
 			<div class="title">
+				<h5 class="browser-check">이 홈페이지는 구글 크롬으로 접속하셔야 정상적으로 작동합니다.</h5>
 				<div class="img"><img src="img/image (5).png"/></div>
 				<h1><span>함께 </span><span style="font-weight: 800">금주</span><span>해요!</span></h1>
 				<br>
@@ -87,7 +88,7 @@
 			</div>
 		</div>
 		<div class="detail" style="display: block; margin: 150px 25%; padding: 5px 20px; color:white; background: #AB70C1;">
-			<h4>detail</h4>
+			<h4>알코올을 섭취하지 않으면 잠을 잘 수 없는 알코올 의존성 수면장애나 불면증을 겪을 수 있습니다. 알코올의존증 환자의 불면증 유병율은 연구에 따라 36~72%에 육박합니다. 또 알코올은 각성 시에 나타나는 뇌파를 수면 중에 증가시키고 신체회복에 중요한 역할을 하는 렘 수면 또한 차단하여 일어난 후에도 피로를 느끼게 합니다.</h4>
 		</div>
 	</div>
 	<div class="page" id="help">
