--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NO DRINK</title>
+	<title>NO DRINK</title>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
     <div class="header-container">
@@ -15,6 +16,7 @@
 					<li><a class = "a-home" href="#home">홈</a></li>
 					<li><a class = "a-statistics" href="#statistics">현황</a></li>
 					<li><a class = "a-danger" href="#danger">위험성</a></li>
+					<li><a class = "a-test" href="#test">자가진단</a></li>
 					<li><a class = "a-help" href="#help">도움</a></li>
 				</ul>
 			</nav>
@@ -69,26 +71,150 @@
 	</div>
 	<div class="page" id="danger">
 		<div class="icon-container">
-			<h1 style="color: #AB70C1">Click!</h5>
-			<div class="icon" onmouseover="mover1()">
+			<h2 class="text-click" style="color: #AB70C1">마우스를 대 보세요!</h2>
+			<div class="icon icon1" onmouseover="mover1()">
 				<div class="img"><img src="img/image (1).png"/></div>
 				<h2 class="text">수면 장애</h2>
 			</div>
-			<div class="icon" onmouseover="mover2()">
+			<div class="icon icon2" onmouseover="mover2()">
 				<div class="img"><img src="img/image (2).png"/></div>
 				<h2 class="text">약물 부작용</h2>
 			</div>
-			<div class="icon" onmouseover="mover3()">
+			<div class="icon icon3" onmouseover="mover3()">
 				<div class="img"><img src="img/image (3).png"/></div>
 				<h2 class="text">간 질환 발병</h2>
 			</div>
-			<div class="icon" onmouseover="mover4()">
+			<div class="icon icon4" onmouseover="mover4()">
 				<div class="img"><img src="img/image (4).png"/></div>
 				<h2 class="text">암 발병</h2>
 			</div>
 		</div>
 		<div class="detail" style="display: block; margin: 150px 25%; padding: 5px 20px; color:white; background: #AB70C1;">
 			<h4>알코올을 섭취하지 않으면 잠을 잘 수 없는 알코올 의존성 수면장애나 불면증을 겪을 수 있습니다. 알코올의존증 환자의 불면증 유병율은 연구에 따라 36~72%에 육박합니다. 또 알코올은 각성 시에 나타나는 뇌파를 수면 중에 증가시키고 신체회복에 중요한 역할을 하는 렘 수면 또한 차단하여 일어난 후에도 피로를 느끼게 합니다.</h4>
+		</div>
+	</div>
+	<div class="page" id="test">
+		<div class="test-table">
+			<h1 style="color:white; text-align:center">알콜중독 자가진단 테스트</h1>
+			<h5 style="color:white; text-align:center">출처 : 보건복지부</h5>
+			<table style="margin: auto; text-align:center; border-spacing: 10px 30px">
+				<tr>
+					<td>얼마나 술을 자주 마십니까?</td>
+					<td><input type="radio" name="q1" value=0><br>전혀 안 마심</td>
+					<td><input type="radio" name="q1" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q1" value=2><br>월 2~3회</td>
+					<td><input type="radio" name="q1" value=3><br>주 2~3회</td>
+					<td><input type="radio" name="q1" value=4><br>주 4회 이상</td>
+				</tr>
+				<tr>
+					<td>술을 마시면 한번에 몇 잔정도 마십니까?</td>
+					<td><input type="radio" name="q2" value=0><br>전혀 안 마심</td>
+					<td><input type="radio" name="q2" value=1><br>소주 1~2잔</td>
+					<td><input type="radio" name="q2" value=2><br>소주 3~4잔</td>
+					<td><input type="radio" name="q2" value=3><br>소주 5~6잔</td>
+					<td><input type="radio" name="q2" value=4><br>소주 7~9잔</td>
+				</tr>
+				<tr>
+					<td>한번에 소주 한 병 또는 맥주4병 이상 마시는 경우는 얼마나 자주 있습니까?</td>
+					<td><input type="radio" name="q3" value=0><br>없음</td>
+					<td><input type="radio" name="q3" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q3" value=2><br>월 1회</td>
+					<td><input type="radio" name="q3" value=3><br>주 1회</td>
+					<td><input type="radio" name="q3" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>지난 일년간 한번 술을 마시기 시작하면 멈출 수 없었던 때가 얼마나 자주 있었습니까?</td>
+					<td><input type="radio" name="q4" value=0><br>없음</td>
+					<td><input type="radio" name="q4" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q4" value=2><br>월 1회</td>
+					<td><input type="radio" name="q4" value=3><br>주 1회</td>
+					<td><input type="radio" name="q4" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>지난 일년간 평소 같으면 할수 있었던 일을 음주 때문에 하지 못한 적이 얼마나 자주 있었습니까?</td>
+					<td><input type="radio" name="q5" value=0><br>없음</td>
+					<td><input type="radio" name="q5" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q5" value=2><br>월 1회</td>
+					<td><input type="radio" name="q5" value=3><br>주 1회</td>
+					<td><input type="radio" name="q5" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>지난 일년간 술을 마신 다음날 해장술을 마신 적은 얼마나 자주 있었습니까?</td>
+					<td><input type="radio" name="q6" value=0><br>없음</td>
+					<td><input type="radio" name="q6" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q6" value=2><br>월 1회</td>
+					<td><input type="radio" name="q6" value=3><br>주 1회</td>
+					<td><input type="radio" name="q6" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>지난 일년간 음주 후에 죄책감을 느끼거나 후회한 적이 얼마나 자주 있었습니까?</td>
+					<td><input type="radio" name="q7" value=0><br>없음</td>
+					<td><input type="radio" name="q7" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q7" value=2><br>월 1회</td>
+					<td><input type="radio" name="q7" value=3><br>주 1회</td>
+					<td><input type="radio" name="q7" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>지난 일년간 음주 때문에 전날 밤에 있었던 일이 기억나지 않았던 적이 얼마나 자주 있었습니까?</td>
+					<td><input type="radio" name="q8" value=0><br>없음</td>
+					<td><input type="radio" name="q8" value=1><br>월 1회 미만</td>
+					<td><input type="radio" name="q8" value=2><br>월 1회</td>
+					<td><input type="radio" name="q8" value=3><br>주 1회</td>
+					<td><input type="radio" name="q8" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td>음주로 인해 자신이나 다른 사람을 다치게 한 적이 있습니까?</td>
+					<td><input type="radio" name="q9" value=0><br>없음</td>
+					<td></td>
+					<td><input type="radio" name="q9" value=2><br>있었지만 지난 1년간은 없음</td>
+					<td></td>
+					<td><input type="radio" name="q9" value=4><br>지난 1년간 있었다.</td>
+				</tr>
+				<tr>
+					<td>친척이나 친구, 의사가 당신이 술 마시는 것을 걱정하거나 당신에게 술 끊기를 권유한 적이 있었습니까?</td>
+					<td><input type="radio" name="q10" value=0><br>없음</td>
+					<td></td>
+					<td><input type="radio" name="q10" value=2><br>있었지만 지난 1년간은 없음</td>
+					<td></td>
+					<td><input type="radio" name="q10" value=4><br>지난 1년간 있었다.</td>
+				</tr>
+			</table>
+			<br>
+			<br>
+			<br>
+			<br>
+			<div class="result-container" style="text-align: center;">
+				<button type="button" class="button" style="text-align: center;">결과 보기</button>
+				<div class="result" style="padding: 5px 20px; color:white;">
+					<h3></h4>
+					<h4></h5>
+				</div>
+			</div>
+			<script type="text/javascript">
+				$(document).ready(function () {
+				  $('.button').click(function () {
+					var value = 0;
+					for (var i = 1; i <= 10; i++) {
+						value += Number($('input[name="q'+i+'"]:checked').val());
+					}
+					if (!isNaN(value)) {
+						if (value < 9) {
+							$(".result h3").text(value + "점 : 정상음주");
+							$(".result h4").text("정상적인 음주습관을 가지고 있습니다.");
+						} else if (value < 12) {
+							$(".result h3").text(value + "점 : 위험음주 수준으로 주의를 요함");
+							$(".result h4").text("아직까지는 특별히 심각한 음주로 인한 문제가 발생하지는 않았지만, 향후 음주로 인한 문제가 발생할 가능성이 있습니다. 음주량을 줄이거나 음주횟수를 줄여 적정음주를 실행하도록 하는 것이 좋습니다.");
+						} else if (value < 20) {
+							$(".result h3").text(value + "점 : 고위험음주 혹은 잠재적인 알콜 사용장애 환자");
+							$(".result h4").text("이미 신체적 건강이나 행동상의 문제가 나타나는 수준으로 속히 전문의의 진찰을 받는 것이 좋습니다.");
+						} else {
+							$(".result h3").text(value + "점 : 알콜 사용장애 환자");
+							$(".result h4").text("이미 알콜 사용장애, 특히 알콜 의존 상태임이 강력히 시사됩니다. 속히 전문의의 진찰을 받고 전문화된 치료를 시작하는 것이 좋습니다.");
+						}
+					}
+				  });
+				});
+			  </script>
 		</div>
 	</div>
 	<div class="page" id="help">
