--- a/index.html
+++ b/index.html
@@ -97,89 +97,107 @@
 		<div class="test-table">
 			<h1 style="color:white; text-align:center">알콜중독 자가진단 테스트</h1>
 			<h5 style="color:white; text-align:center">출처 : 보건복지부</h5>
-			<table style="margin: auto; text-align:center; border-spacing: 10px 30px">
+			<table style="margin: auto; text-align:center; border-spacing: 0px 30px; width: 60%">
 				<tr>
-					<td>얼마나 술을 자주 마십니까?</td>
-					<td><input type="radio" name="q1" value=0><br>전혀 안 마심</td>
-					<td><input type="radio" name="q1" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q1" value=2><br>월 2~3회</td>
-					<td><input type="radio" name="q1" value=3><br>주 2~3회</td>
-					<td><input type="radio" name="q1" value=4><br>주 4회 이상</td>
+					<td colspan="5" style="font-weight: 700;">얼마나 술을 자주 마십니까?</td>
 				</tr>
 				<tr>
-					<td>술을 마시면 한번에 몇 잔정도 마십니까?</td>
-					<td><input type="radio" name="q2" value=0><br>전혀 안 마심</td>
-					<td><input type="radio" name="q2" value=1><br>소주 1~2잔</td>
-					<td><input type="radio" name="q2" value=2><br>소주 3~4잔</td>
-					<td><input type="radio" name="q2" value=3><br>소주 5~6잔</td>
-					<td><input type="radio" name="q2" value=4><br>소주 7~9잔</td>
+					<td width="10%"><input type="radio" name="q1" value=0><br>전혀 안 마심</td>
+					<td width="10%"><input type="radio" name="q1" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q1" value=2><br>월 2~3회</td>
+					<td width="10%"><input type="radio" name="q1" value=3><br>주 2~3회</td>
+					<td width="10%"><input type="radio" name="q1" value=4><br>주 4회 이상</td>
 				</tr>
 				<tr>
-					<td>한번에 소주 한 병 또는 맥주4병 이상 마시는 경우는 얼마나 자주 있습니까?</td>
-					<td><input type="radio" name="q3" value=0><br>없음</td>
-					<td><input type="radio" name="q3" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q3" value=2><br>월 1회</td>
-					<td><input type="radio" name="q3" value=3><br>주 1회</td>
-					<td><input type="radio" name="q3" value=4><br>거의 매일</td>
+					<td colspan="5" style="font-weight: 700;">술을 마시면 한번에 몇 잔정도 마십니까?</td>
+				<tr>
+					<td width="10%"><input type="radio" name="q2" value=0><br>전혀 안 마심</td>
+					<td width="10%"><input type="radio" name="q2" value=1><br>소주 1~2잔</td>
+					<td width="10%"><input type="radio" name="q2" value=2><br>소주 3~4잔</td>
+					<td width="10%"><input type="radio" name="q2" value=3><br>소주 5~6잔</td>
+					<td width="10%"><input type="radio" name="q2" value=4><br>소주 7~9잔</td>
 				</tr>
 				<tr>
-					<td>지난 일년간 한번 술을 마시기 시작하면 멈출 수 없었던 때가 얼마나 자주 있었습니까?</td>
-					<td><input type="radio" name="q4" value=0><br>없음</td>
-					<td><input type="radio" name="q4" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q4" value=2><br>월 1회</td>
-					<td><input type="radio" name="q4" value=3><br>주 1회</td>
-					<td><input type="radio" name="q4" value=4><br>거의 매일</td>
+					<td colspan="5" style="font-weight: 700;">한번에 소주 한 병 또는 맥주4병 이상 마시는 경우는 얼마나 자주 있습니까?</td>
 				</tr>
 				<tr>
-					<td>지난 일년간 평소 같으면 할수 있었던 일을 음주 때문에 하지 못한 적이 얼마나 자주 있었습니까?</td>
-					<td><input type="radio" name="q5" value=0><br>없음</td>
-					<td><input type="radio" name="q5" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q5" value=2><br>월 1회</td>
-					<td><input type="radio" name="q5" value=3><br>주 1회</td>
-					<td><input type="radio" name="q5" value=4><br>거의 매일</td>
+					<td width="10%"><input type="radio" name="q3" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q3" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q3" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q3" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q3" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td>지난 일년간 술을 마신 다음날 해장술을 마신 적은 얼마나 자주 있었습니까?</td>
-					<td><input type="radio" name="q6" value=0><br>없음</td>
-					<td><input type="radio" name="q6" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q6" value=2><br>월 1회</td>
-					<td><input type="radio" name="q6" value=3><br>주 1회</td>
-					<td><input type="radio" name="q6" value=4><br>거의 매일</td>
+					<td colspan="5" style="font-weight: 700;">지난 일년간 한번 술을 마시기 시작하면 멈출 수 없었던 때가 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
-					<td>지난 일년간 음주 후에 죄책감을 느끼거나 후회한 적이 얼마나 자주 있었습니까?</td>
-					<td><input type="radio" name="q7" value=0><br>없음</td>
-					<td><input type="radio" name="q7" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q7" value=2><br>월 1회</td>
-					<td><input type="radio" name="q7" value=3><br>주 1회</td>
-					<td><input type="radio" name="q7" value=4><br>거의 매일</td>
+					<td width="10%"><input type="radio" name="q4" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q4" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q4" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q4" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q4" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td>지난 일년간 음주 때문에 전날 밤에 있었던 일이 기억나지 않았던 적이 얼마나 자주 있었습니까?</td>
-					<td><input type="radio" name="q8" value=0><br>없음</td>
-					<td><input type="radio" name="q8" value=1><br>월 1회 미만</td>
-					<td><input type="radio" name="q8" value=2><br>월 1회</td>
-					<td><input type="radio" name="q8" value=3><br>주 1회</td>
-					<td><input type="radio" name="q8" value=4><br>거의 매일</td>
+					<td colspan="5" style="font-weight: 700;">지난 일년간 평소 같으면 할수 있었던 일을 음주 때문에 하지 못한 적이 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
-					<td>음주로 인해 자신이나 다른 사람을 다치게 한 적이 있습니까?</td>
-					<td><input type="radio" name="q9" value=0><br>없음</td>
-					<td></td>
-					<td><input type="radio" name="q9" value=2><br>있었지만 지난 1년간은 없음</td>
-					<td></td>
-					<td><input type="radio" name="q9" value=4><br>지난 1년간 있었다.</td>
+					<td width="10%"><input type="radio" name="q5" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q5" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q5" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q5" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q5" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td>친척이나 친구, 의사가 당신이 술 마시는 것을 걱정하거나 당신에게 술 끊기를 권유한 적이 있었습니까?</td>
-					<td><input type="radio" name="q10" value=0><br>없음</td>
-					<td></td>
-					<td><input type="radio" name="q10" value=2><br>있었지만 지난 1년간은 없음</td>
-					<td></td>
-					<td><input type="radio" name="q10" value=4><br>지난 1년간 있었다.</td>
+					<td colspan="5" style="font-weight: 700;">지난 일년간 술을 마신 다음날 해장술을 마신 적은 얼마나 자주 있었습니까?</td>
+				</tr>
+				<tr>
+					<td width="10%"><input type="radio" name="q6" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q6" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q6" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q6" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q6" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td colspan="5" style="font-weight: 700;">지난 일년간 음주 후에 죄책감을 느끼거나 후회한 적이 얼마나 자주 있었습니까?</td>
+				</tr>
+				<tr>
+					<td width="10%"><input type="radio" name="q7" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q7" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q7" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q7" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q7" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td colspan="5" style="font-weight: 700;">지난 일년간 음주 때문에 전날 밤에 있었던 일이 기억나지 않았던 적이 얼마나 자주 있었습니까?</td>
+				</tr>
+				<tr>
+					<td width="10%"><input type="radio" name="q8" value=0><br>없음</td>
+					<td width="10%"><input type="radio" name="q8" value=1><br>월 1회 미만</td>
+					<td width="10%"><input type="radio" name="q8" value=2><br>월 1회</td>
+					<td width="10%"><input type="radio" name="q8" value=3><br>주 1회</td>
+					<td width="10%"><input type="radio" name="q8" value=4><br>거의 매일</td>
+				</tr>
+				<tr>
+					<td colspan="5" style="font-weight: 700;">음주로 인해 자신이나 다른 사람을 다치게 한 적이 있습니까?</td>
+				</tr>
+				<tr>
+					<td width="10%"><input type="radio" name="q9" value=0><br>없음</td>
+					<td width="10%"></td>
+					<td width="10%"><input type="radio" name="q9" value=2><br>있었지만 지난 1년간은 없음</td>
+					<td width="10%"></td>
+					<td width="10%"><input type="radio" name="q9" value=4><br>지난 1년간 있었다.</td>
+				</tr>
+				<tr>
+					<td colspan="5" style="font-weight: 700;">친척이나 친구, 의사가 당신이 술 마시는 것을 걱정하거나 당신에게 술 끊기를 권유한 적이 있었습니까?</td>
+				</tr>
+				<tr>
+					<td width="10%"><input type="radio" name="q10" value=0><br>없음</td>
+					<td width="10%"></td>
+					<td width="10%"><input type="radio" name="q10" value=2><br>있었지만 지난 1년간은 없음</td>
+					<td width="10%"></td>
+					<td width="10%"><input type="radio" name="q10" value=4><br>지난 1년간 있었다.</td>
 				</tr>
 			</table>
-			<br>
 			<br>
 			<br>
 			<br>
