--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
 				<h5>-Walter Scott(1771~1831)</h5>
 			</div>
 		</div>
-		<div class="youtube" style="height: 400px; text-align: center; background: palevioletred; padding: 20%">
-				<iframe width="100%" height="100%" src="https://www.youtube.com/embed/0hSVJXvLkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div class="youtube" style="height: 400px; text-align: center; background: palevioletred; padding: 20%; color:white">
+			<h1>건전 음주 캠페인</h1>
+			<iframe width="100%" height="100%" src="https://www.youtube.com/embed/0hSVJXvLkp8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<h4>출처 : 보건복지부</h4>
 		</div>
 	</div>
 	<div class="page" id="statistics">
@@ -99,7 +101,7 @@
 			<h5 style="color:white; text-align:center">출처 : 보건복지부</h5>
 			<table style="margin: auto; text-align:center; border-spacing: 0px 30px; width: 60%">
 				<tr>
-					<td colspan="5" style="font-weight: 700;">얼마나 술을 자주 마십니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">얼마나 술을 자주 마십니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q1" value=0><br>전혀 안 마심</td>
@@ -109,7 +111,7 @@
 					<td width="10%"><input type="radio" name="q1" value=4><br>주 4회 이상</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">술을 마시면 한번에 몇 잔정도 마십니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">술을 마시면 한번에 몇 잔정도 마십니까?</td>
 				<tr>
 					<td width="10%"><input type="radio" name="q2" value=0><br>전혀 안 마심</td>
 					<td width="10%"><input type="radio" name="q2" value=1><br>소주 1~2잔</td>
@@ -118,7 +120,7 @@
 					<td width="10%"><input type="radio" name="q2" value=4><br>소주 7~9잔</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">한번에 소주 한 병 또는 맥주4병 이상 마시는 경우는 얼마나 자주 있습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">한번에 소주 한 병 또는 맥주4병 이상 마시는 경우는 얼마나 자주 있습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q3" value=0><br>없음</td>
@@ -128,7 +130,7 @@
 					<td width="10%"><input type="radio" name="q3" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">지난 일년간 한번 술을 마시기 시작하면 멈출 수 없었던 때가 얼마나 자주 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">지난 일년간 한번 술을 마시기 시작하면 멈출 수 없었던 때가 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q4" value=0><br>없음</td>
@@ -138,7 +140,7 @@
 					<td width="10%"><input type="radio" name="q4" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">지난 일년간 평소 같으면 할수 있었던 일을 음주 때문에 하지 못한 적이 얼마나 자주 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">지난 일년간 평소 같으면 할수 있었던 일을 음주 때문에 하지 못한 적이 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q5" value=0><br>없음</td>
@@ -148,7 +150,7 @@
 					<td width="10%"><input type="radio" name="q5" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">지난 일년간 술을 마신 다음날 해장술을 마신 적은 얼마나 자주 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">지난 일년간 술을 마신 다음날 해장술을 마신 적은 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q6" value=0><br>없음</td>
@@ -158,7 +160,7 @@
 					<td width="10%"><input type="radio" name="q6" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">지난 일년간 음주 후에 죄책감을 느끼거나 후회한 적이 얼마나 자주 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">지난 일년간 음주 후에 죄책감을 느끼거나 후회한 적이 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q7" value=0><br>없음</td>
@@ -168,7 +170,7 @@
 					<td width="10%"><input type="radio" name="q7" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">지난 일년간 음주 때문에 전날 밤에 있었던 일이 기억나지 않았던 적이 얼마나 자주 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">지난 일년간 음주 때문에 전날 밤에 있었던 일이 기억나지 않았던 적이 얼마나 자주 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q8" value=0><br>없음</td>
@@ -178,7 +180,7 @@
 					<td width="10%"><input type="radio" name="q8" value=4><br>거의 매일</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">음주로 인해 자신이나 다른 사람을 다치게 한 적이 있습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">음주로 인해 자신이나 다른 사람을 다치게 한 적이 있습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q9" value=0><br>없음</td>
@@ -188,7 +190,7 @@
 					<td width="10%"><input type="radio" name="q9" value=4><br>지난 1년간 있었다.</td>
 				</tr>
 				<tr>
-					<td colspan="5" style="font-weight: 700;">친척이나 친구, 의사가 당신이 술 마시는 것을 걱정하거나 당신에게 술 끊기를 권유한 적이 있었습니까?</td>
+					<td colspan="5" style="font-weight: 700; background: white; color: #9370D8; padding: 5px">친척이나 친구, 의사가 당신이 술 마시는 것을 걱정하거나 당신에게 술 끊기를 권유한 적이 있었습니까?</td>
 				</tr>
 				<tr>
 					<td width="10%"><input type="radio" name="q10" value=0><br>없음</td>
@@ -202,7 +204,7 @@
 			<br>
 			<br>
 			<div class="result-container" style="text-align: center;">
-				<button type="button" class="button" style="text-align: center;">결과 보기</button>
+				<button type="button" class="button">결과 보기</button>
 				<div class="result" style="padding: 5px 20px; color:white;">
 					<h3></h4>
 					<h4></h5>
@@ -254,10 +256,10 @@
 					예방 서비스 제공.</h5>
 				<a href="http://www.129.go.kr">보건복지상담센터</a>
 				<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
-				<h5 style="font-weight: 400; font-size: 1.0rem;">보건복지 정보 및 상담 제공</h5>
+				<h5 style="font-weight: 400; font-size: 1.0rem;">보건복지 정보 및 상담 제공.</h5>
 				<a href="http://ncmh.go.kr/kor/index.jsp">국립정신건강센터</a>
 				<img src="img/image (6).png" style="width: 1%; min-width: 15px;"/>
-				<h5 style="font-weight: 400; font-size: 1.0rem;">정신질환 예방 및 진료, 정신건강 관련 교육</h5>
+				<h5 style="font-weight: 400; font-size: 1.0rem;">정신질환 예방 및 진료, 정신건강 관련 교육.</h5>
 			</div>
 		</div>
 	</div>
